--- a/notebook_fastapi.ipynb
+++ b/notebook_fastapi.ipynb
@@ -210,6 +210,13 @@
     "t_mistral"
    ]
   },
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 构建RAG"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 4,
